--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=GUI_Archivos
+application.vendor=Cobo2
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,8 +33,10 @@ dist.jar=${dist.dir}/GUI_Archivos.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/GUI_Archivos
+endorsed.classpath=
 excludes=
 file.reference.javax.activation-1.1.0.v201105071233.jar=lib\\javax.activation-1.1.0.v201105071233.jar
+file.reference.jcalendar-1.4.jar=lib/jcalendar-1.4.jar
 file.reference.jcommon-1.0.17.jar=lib\\jcommon-1.0.17.jar
 file.reference.jfreechart-1.0.14.jar=lib\\jfreechart-1.0.14.jar
 file.reference.mail.jar=lib\\mail.jar
@@ -44,7 +47,8 @@ javac.classpath=\
     ${file.reference.javax.activation-1.1.0.v201105071233.jar}:\
     ${file.reference.mail.jar}:\
     ${file.reference.jcommon-1.0.17.jar}:\
-    ${file.reference.jfreechart-1.0.14.jar}
+    ${file.reference.jfreechart-1.0.14.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
